force-app/main/default/objects/Payment_Response__e/Payment_Response__e.object-meta.xml
<CustomObject>
    <description>Published by MuleSoft when it receives a response message from Service Victoria in relation to a Demand Service, or when a BPAY payment event has been identified.  Salesforce subscribes to these platform event messages to update existing payment records.</description>
    <label>Payment Response</label>
    <pluralLabel>Payment Responses</pluralLabel>
</CustomObject>