force-app/main/default/objects/Payment_Response__e/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>The amount that the participant has paid</description>
    <label>Amount Received</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>