force-app/main/default/objects/Payment_Response__e/fields/DemandID__c.field-meta.xml
<CustomField>
    <fullName>DemandID__c</fullName>
    <description>SV Identifier returned from payment registration</description>
    <label>Demand ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>