force-app/main/default/objects/Payment_Response__e/fields/iCRN__c.field-meta.xml
<CustomField>
    <fullName>iCRN__c</fullName>
    <description>The BPAY intelligent Customer Reference Number</description>
    <label>iCRN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>