force-app/main/default/objects/Payment_Response__e/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>URL returned from SV</description>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>