force-app/main/default/objects/Payment_Response__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The method participant has selected to make payment with.  Method or cardscheme captured by SV.  Used to calculate transaction fee (eg VISA, Mastercard, Paypal, BPAY)</description>
    <label>Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>