force-app/main/default/objects/Payment_Response__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Describes what change has occurred.  Can be one of: 
Registration
Payment Receipt
Expiry
Cancellation</description>
    <label>Operation</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>