force-app/main/default/objects/Payment_Response__e/fields/Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Operation_Date__c</fullName>
    <description>Date of Operation eg. LastUpdatedDate</description>
    <label>Operation Date</label>
    <type>Date</type>
</CustomField>