force-app/main/default/objects/Payment_Response__e/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <description>Salesforce Payment identifier</description>
    <label>Payment ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>