force-app/main/default/objects/Payment_Response__e/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Number confirming that the payment transaction was deemed by SV to be successful</description>
    <label>Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>