force-app/main/default/objects/Payment_Response__e/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <description>Error code returned by SV.  Drives additional notification to Administrator and SRO officer</description>
    <label>Result Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>