force-app/main/default/objects/Payment_Response__e/fields/Result_Description__c.field-meta.xml
<CustomField>
    <fullName>Result_Description__c</fullName>
    <label>Result Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>