force-app/main/default/objects/Payment_Response__e/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Transaction settlement date</description>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>